test/classes/bradc/arrayInClass/overrideDefaultArr.good
c is: {x = 1.0 2.0 3.0}
overrideDefaultArr.chpl:11: error: halt reached - assigning between arrays of different shapes in dimension 0: 3 vs. 4
